@@ -2,7 +2,7 @@
 {% load wagtailcore_tags %}
 
 {% block menu_footer %}
-    <li class="footer">
+    <li class="footer footer-submenu">
         <div class="menu-item"><p class="wagtail-version">Wagtail v.{% wagtail_version %}</p></div>
     </li>
 {% endblock %}
