@@ -7,6 +7,7 @@ Changelog
  * Removed leftover Python 2.x compatibility code (Sergey Fedoseev)
  * Combine flake8 configurations (Sergey Fedoseev)
  * Fix: Rename documents listing column 'uploaded' to 'created' (LB (Ben Johnston))
+ * Fix: Submenu items longer then the page height are no longer broken by the submenu footer (Igor van Spengen)
 
 2.7 LTS (xx.xx.xxxx) - IN DEVELOPMENT
 ~~~~~~~~~~~~~~~~~~~~
